# jaffle_shop_unit_testing

./: .gitignore  Makefile  dbt_project.yml  pyproject.toml
models/: schema.yml
models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
profiles/: profiles.yml
scripts/: setup_postgres.sql
seeds/tests/happy_path/test_case_1/: test_case_1_input_raw_customers.csv  test_case_1_input_raw_orders.csv  test_case_1_input_raw_payments.csv  test_case_1_outcome_customers.csv  test_case_1_outcome_orders.csv
seeds/tests/happy_path/test_case_2/: test_case_2_input_raw_orders.csv  test_case_2_input_raw_payments.csv  test_case_2_outcome_customers.csv  test_case_2_outcome_orders.csv
seeds/tests/sad_path/stg_customers/: source_customers_vars_not_null_stg_customers_customer_id.csv  source_customers_vars_unique_stg_customers_customer_id.csv
seeds/tests/sad_path/stg_orders/: source_orders_vars_not_null_stg_orders_order_id.csv  source_orders_vars_unique_stg_orders_order_id.csv
seeds/tests/sad_path/stg_payments/: source_payments_vars_not_null_stg_payments_payment_id.csv  source_payments_vars_unique_stg_payments_payment_id.csv
