[tool.poetry]
name = "jaffle_shop_unit_testing"
version = "0.1.0"
description = "Unit testing for the dbt jaffel shop project"
authors = ["Lukas Sandmeir <lukas@sandmeir.info>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
